[DDW-452] API wiring progress

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -307,6 +307,9 @@
   "settings.support.steps.reportProblem.link": "Open the support request form in your browser",
   "settings.support.steps.reportProblem.title": "Report a problem",
   "settings.support.steps.title": "Steps for creating a support request:",
+  "settings.wallets.currency.titleLabel": "Show ada price in other currency",
+  "settings.wallets.currency.description": "This feature does… Lorem ipsum dolor sit amet, consectetur adipiscing elit",
+  "settings.wallets.currency.selectLabel": "Countervalue",
   "sidebar.wallets.addWallet": "Add wallet",
   "staking.countdown.learnMore.linkUrl": "https://iohk.zendesk.com/hc/en-us",
   "staking.delegationCenter.bodyTitle": "Wallets",
