[DDW-149] Update undelegate wallet panel on wallet settings screen

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -939,6 +939,9 @@
   "wallet.settings.changePassword.dialog.title.changePassword": "パスワードを変更する",
   "wallet.settings.changePassword.dialog.title.setPassword": "{walletName}ウォレットにパスワードを設定する",
   "wallet.settings.copyPublicKey": "公開鍵をコピーする",
+  "wallet.settings.delegateWallet.header": "ウォレットを委任する",
+  "wallet.settings.delegateWallet.warning": "このウォレットは委任されていません。このウォレットのステークを委任し、報酬を稼ぎ、Cardanoネットワークのセキュリティをサポートしてください。",
+  "wallet.settings.delegateWalletButtonLabel": "委任する",
   "wallet.settings.delete.dialog.confirmBackupNotice": "削除したウォレットに再びアクセスする唯一の方法は、ウォレット復元フレーズを使用して復元することであると理解しました。",
   "wallet.settings.delete.dialog.confirmButtonLabel": "削除する",
   "wallet.settings.delete.dialog.enterRecoveryWordLabel": "削除するウォレット名を入力して確認してください：",
@@ -1011,9 +1014,10 @@
   "wallet.settings.undelegate.result.dialog.description1": "<strong>{walletName}</strong>ウォレットのステークは現在委任されておらず、まもなくこのウォレットへの報酬は停止されます。",
   "wallet.settings.undelegate.result.dialog.description2": "新しい委任設定はブロックチェーンに送信され、<strong>現行のCardanoエポックと次のエポックが{timeUntilNextEpochStart}後に終了となり次第有効になります。</strong>それまでは、変更前の委任設定が有効のままとなります。",
   "wallet.settings.undelegate.result.dialog.title": "ウォレットの委任設定が解除されました",
+  "wallet.settings.undelegateWallet.disabledWarning": "このウォレットはブロックチェーンと同期中のため、委任設定状況は不明であり、委任設定の解除はできません。",
   "wallet.settings.undelegateWallet.header": "ウォレットの委任設定を解除する",
   "wallet.settings.undelegateWallet.warning": "このウォレットの使用を停止し、すべての資金を移す場合には、まず委任設定を解除し、デポジットの2ADAを回収してください。ウォレットの委任設定を解除後、3Cardanoエポック間は委任報酬が継続します。",
-  "wallet.settings.undelegateWalletButtonLabel": "ウォレットの委任設定を解除する",
+  "wallet.settings.undelegateWalletButtonLabel": "委任設定を解除する",
   "wallet.settings.utxos.description": "このウォレットには、<b>{walletUtxosAmount}のUTXO</b>（未使用トランザクションアウトプット)に<b>{formattedWalletAmount}ADA</b>が含まれています。含まれるADAの額ごとのUTXO分布状況は、下のグラフで確認できます。",
   "wallet.settings.utxos.emptyWallet": "このウォレットは空のため、UTXO（未使用トランザクションアウトプット）はありません。",
   "wallet.settings.utxos.findOutMoreLink": "もっと知る",
