--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -10045,6 +10045,25 @@
   {
     "descriptors": [
       {
+        "defaultMessage": "!!!Delegate",
+        "description": "Label for the delegate button on wallet settings",
+        "end": {
+          "column": 3,
+          "line": 12
+        },
+        "file": "source/renderer/app/components/wallet/settings/DelegateWalletButton.js",
+        "id": "wallet.settings.delegateWalletButtonLabel",
+        "start": {
+          "column": 9,
+          "line": 8
+        }
+      }
+    ],
+    "path": "source/renderer/app/components/wallet/settings/DelegateWalletButton.json"
+  },
+  {
+    "descriptors": [
+      {
         "defaultMessage": "!!!Delete wallet",
         "description": "Label for the delete button on wallet settings",
         "end": {
@@ -10233,7 +10252,7 @@
   {
     "descriptors": [
       {
-        "defaultMessage": "!!!Undelegate wallet",
+        "defaultMessage": "!!!Undelegate",
         "description": "Label for the undelegate button on wallet settings",
         "end": {
           "column": 3,
@@ -11099,27 +11118,27 @@
         "description": "Label for the \"Transaction assurance security level\" dropdown.",
         "end": {
           "column": 3,
-          "line": 33
+          "line": 34
         },
         "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
         "id": "wallet.settings.assurance",
         "start": {
           "column": 23,
-          "line": 28
+          "line": 29
         }
       },
       {
-        "defaultMessage": "!!!Undelegate wallet",
+        "defaultMessage": "!!!Undelegating your wallet",
         "description": "Undelegate wallet header on the wallet settings page.",
         "end": {
           "column": 3,
-          "line": 38
+          "line": 39
         },
         "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
         "id": "wallet.settings.undelegateWallet.header",
         "start": {
           "column": 26,
-          "line": 34
+          "line": 35
         }
       },
       {
@@ -11127,13 +11146,55 @@
         "description": "Undelegate wallet warning explaining the consequences.",
         "end": {
           "column": 3,
-          "line": 44
+          "line": 45
         },
         "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
         "id": "wallet.settings.undelegateWallet.warning",
         "start": {
           "column": 27,
-          "line": 39
+          "line": 40
+        }
+      },
+      {
+        "defaultMessage": "!!!This wallet is synchronizing with the blockchain, so this wallet's delegation status is currently unknown, and undelegation is not possible.",
+        "description": "Undelegate wallet disabled warning explaining why it is disabled.",
+        "end": {
+          "column": 3,
+          "line": 52
+        },
+        "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
+        "id": "wallet.settings.undelegateWallet.disabledWarning",
+        "start": {
+          "column": 35,
+          "line": 46
+        }
+      },
+      {
+        "defaultMessage": "!!!Delegate your wallet",
+        "description": "Delegate wallet header on the wallet settings page.",
+        "end": {
+          "column": 3,
+          "line": 57
+        },
+        "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
+        "id": "wallet.settings.delegateWallet.header",
+        "start": {
+          "column": 24,
+          "line": 53
+        }
+      },
+      {
+        "defaultMessage": "!!!This wallet is not delegated. Please, delegate the stake from this wallet to earn rewards and support the Cardano network's security.",
+        "description": "Delegate wallet warning.",
+        "end": {
+          "column": 3,
+          "line": 63
+        },
+        "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
+        "id": "wallet.settings.delegateWallet.warning",
+        "start": {
+          "column": 25,
+          "line": 58
         }
       },
       {
@@ -11141,13 +11202,13 @@
         "description": "Delete wallet header on the wallet settings page.",
         "end": {
           "column": 3,
-          "line": 49
+          "line": 68
         },
         "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
         "id": "wallet.settings.deleteWallet.header",
         "start": {
           "column": 22,
-          "line": 45
+          "line": 64
         }
       },
       {
@@ -11155,13 +11216,13 @@
         "description": "Delete wallet warning explaining the consequences.",
         "end": {
           "column": 3,
-          "line": 55
+          "line": 74
         },
         "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
         "id": "wallet.settings.deleteWallet.warning1",
         "start": {
           "column": 24,
-          "line": 50
+          "line": 69
         }
       },
       {
@@ -11169,13 +11230,13 @@
         "description": "Delete wallet warning explaining the consequences.",
         "end": {
           "column": 3,
-          "line": 61
+          "line": 80
         },
         "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
         "id": "wallet.settings.deleteWallet.warning2",
         "start": {
           "column": 24,
-          "line": 56
+          "line": 75
         }
       },
       {
@@ -11183,13 +11244,13 @@
         "description": "Label for the \"Name\" text input on the wallet settings page.",
         "end": {
           "column": 3,
-          "line": 66
+          "line": 85
         },
         "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
         "id": "wallet.settings.name.label",
         "start": {
           "column": 8,
-          "line": 62
+          "line": 81
         }
       },
       {
@@ -11197,13 +11258,13 @@
         "description": "Label for the \"Password\" field.",
         "end": {
           "column": 3,
-          "line": 71
+          "line": 90
         },
         "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
         "id": "wallet.settings.password",
         "start": {
           "column": 17,
-          "line": 67
+          "line": 86
         }
       },
       {
@@ -11211,13 +11272,13 @@
         "description": "Last updated X time ago message.",
         "end": {
           "column": 3,
-          "line": 76
+          "line": 95
         },
         "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
         "id": "wallet.settings.passwordLastUpdated",
         "start": {
           "column": 23,
-          "line": 72
+          "line": 91
         }
       },
       {
@@ -11225,13 +11286,13 @@
         "description": "You still don't have password set message.",
         "end": {
           "column": 3,
-          "line": 81
+          "line": 100
         },
         "file": "source/renderer/app/components/wallet/settings/WalletSettings.js",
         "id": "wallet.settings.passwordNotSet",
         "start": {
           "column": 18,
-          "line": 77
+          "line": 96
         }
       }
     ],
