--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -939,6 +939,9 @@
   "wallet.settings.changePassword.dialog.title.changePassword": "Change password",
   "wallet.settings.changePassword.dialog.title.setPassword": "Set a password for {walletName} wallet",
   "wallet.settings.copyPublicKey": "Copy public key",
+  "wallet.settings.delegateWallet.header": "Delegate your wallet",
+  "wallet.settings.delegateWallet.warning": "This wallet is not delegated. Please delegate the stake from this wallet to earn rewards and support the security of the Cardano network.",
+  "wallet.settings.delegateWalletButtonLabel": "Delegate",
   "wallet.settings.delete.dialog.confirmBackupNotice": "I understand that the only way to regain access to this wallet is by restoring it with a wallet recovery phrase.",
   "wallet.settings.delete.dialog.confirmButtonLabel": "Delete",
   "wallet.settings.delete.dialog.enterRecoveryWordLabel": "Enter the name of the wallet to confirm deletion:",
@@ -997,7 +1000,7 @@
   "wallet.settings.showQRCode": "Show QR code",
   "wallet.settings.undelegate.dialog.calculatingFees": "Calculating fees",
   "wallet.settings.undelegate.dialog.confirmButtonLabel": "Undelegate",
-  "wallet.settings.undelegate.dialog.confirmIneligibleNotice": "I understand that I will not be eligible to earn rewards when my stake is undelegated.",
+  "wallet.settings.undelegate.dialog.confirmIneligibleNotice": "I understand that I am not eligible to earn rewards when my stake is undelegated.",
   "wallet.settings.undelegate.dialog.confirmUnsupportNotice": "I understand that I am not supporting the Cardano network when my stake is undelegated.",
   "wallet.settings.undelegate.dialog.depositLabel": "Deposit",
   "wallet.settings.undelegate.dialog.descriptionWithTicker": "<p>The stake from your wallet <strong>{walletName}</strong> is currently delegated to the <strong>[{stakePoolTicker}] {stakePoolName}</strong> stake pool.</p><p>Do you want to undelegate your stake and stop earning rewards?</p>",
@@ -1011,9 +1014,10 @@
   "wallet.settings.undelegate.result.dialog.description1": "The stake from your wallet <strong>{walletName}</strong> is no longer delegated and you will soon stop earning rewards for this wallet.",
   "wallet.settings.undelegate.result.dialog.description2": "Your new delegation preferences are now posted on the blockchain <strong>and will take effect after both the current and next Cardano epochs have completed in {timeUntilNextEpochStart}</strong>. During this time, your previous delegation preferences are still active.",
   "wallet.settings.undelegate.result.dialog.title": "Wallet undelegated",
-  "wallet.settings.undelegateWallet.header": "Undelegate wallet",
-  "wallet.settings.undelegateWallet.warning": "If you are planning to stop using this wallet and remove all funds, you should first undelegate it to recover your 2 ada deposit. You will continue getting delegation rewards during the three Cardano epochs after undelegating your wallet.",
-  "wallet.settings.undelegateWalletButtonLabel": "Undelegate wallet",
+  "wallet.settings.undelegateWallet.disabledWarning": "This wallet is currently synchronizing with the blockchain, so its delegation status is currently unknown, and undelegation is not possible.",
+  "wallet.settings.undelegateWallet.header": "Undelegating your wallet",
+  "wallet.settings.undelegateWallet.warning": "If you are planning to stop using this wallet and withdraw all funds, you should first undelegate the wallet to recover your deposit of 2 ada. You will continue to receive delegation rewards during the three Cardano epochs after your wallet is undelegated.",
+  "wallet.settings.undelegateWalletButtonLabel": "Undelegate",
   "wallet.settings.utxos.description": "This wallet contains <b>{formattedWalletAmount} ADA</b> on <b>{walletUtxosAmount} UTXOs</b> (unspent transaction outputs). Examine the histogram below to see the distribution of UTXOs with different amounts of ada.",
   "wallet.settings.utxos.emptyWallet": "This wallet is empty so it does not contain any UTXOs (unspent transaction outputs).",
   "wallet.settings.utxos.findOutMoreLink": "Find out more",
