--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -1009,7 +1009,7 @@
   "wallet.settings.undelegate.dialog.passwordError": "Incorrect spending password.",
   "wallet.settings.undelegate.dialog.spendingPasswordLabel": "Spending password",
   "wallet.settings.undelegate.dialog.spendingPasswordPlaceholder": "Type your spending password here",
-  "wallet.settings.undelegate.dialog.title": "Undelegate Wallet",
+  "wallet.settings.undelegate.dialog.title": "Undelegate",
   "wallet.settings.undelegate.dialog.unknownStakePoolLabel": "unknown",
   "wallet.settings.undelegate.result.dialog.description1": "The stake from your wallet <strong>{walletName}</strong> is no longer delegated and you will soon stop earning rewards for this wallet.",
   "wallet.settings.undelegate.result.dialog.description2": "Your new delegation preferences are now posted on the blockchain <strong>and will take effect after both the current and next Cardano epochs have completed in {timeUntilNextEpochStart}</strong>. During this time, your previous delegation preferences are still active.",
