--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -332,7 +332,7 @@
   "staking.delegationCenter.undelegate.dialog.calculatingFees": "手数料を計算しています",
   "staking.delegationCenter.undelegate.dialog.confirmButtonLabel": "委任を解除する",
   "staking.delegationCenter.undelegate.dialog.confirmIneligibleCheck": "ステークを委任していないと、報酬を得られないことを理解しました。",
-  "staking.delegationCenter.undelegate.dialog.confirmUnsupportCheck": "ステークを委任していないと、Cardanoネットワークをサポートできないことを理解しました。",
+  "staking.delegationCenter.undelegate.dialog.confirmUnsupportCheck": "ステークを委任していないと、Cardanoネットワークのセキュリティをサポートできないことを理解しました。",
   "staking.delegationCenter.undelegate.dialog.descriptionWithTicker": "<p><strong>{walletName}</strong>ウォレットのステークは現在<strong>「{stakePoolTicker}」 {stakePoolName}</strong>ステークプールに委任されています。</p><p>ステークの委任を解除して報酬の獲得を停止しますか。</p>",
   "staking.delegationCenter.undelegate.dialog.descriptionWithUnknownTicker": "<p><strong>{walletName}</strong>ウォレットのステークは現在<strong>{stakePoolTicker}</strong>ステークプールに委任されています。</p><p>ステークの委任を解除して報酬の獲得を停止しますか。</p>",
   "staking.delegationCenter.undelegate.dialog.feesLabel": "手数料",
@@ -1014,7 +1014,7 @@
   "wallet.settings.undelegate.result.dialog.description1": "<strong>{walletName}</strong>ウォレットのステークは現在委任されておらず、まもなくこのウォレットへの報酬は停止されます。",
   "wallet.settings.undelegate.result.dialog.description2": "新しい委任設定はブロックチェーンに送信され、<strong>現行のCardanoエポックと次のエポックが{timeUntilNextEpochStart}後に終了となり次第有効になります。</strong>それまでは、変更前の委任設定が有効のままとなります。",
   "wallet.settings.undelegate.result.dialog.title": "ウォレットの委任設定が解除されました",
-  "wallet.settings.undelegateWallet.disabledWarning": "このウォレットはブロックチェーンと同期中のため、委任設定状況は不明であり、委任設定の解除はできません。",
+  "wallet.settings.undelegateWallet.disabledWarning": "このウォレットは現在ブロックチェーンと同期中のため、委任設定状況は不明であり、委任設定の解除はできません。",
   "wallet.settings.undelegateWallet.header": "ウォレットの委任設定を解除する",
   "wallet.settings.undelegateWallet.warning": "このウォレットの使用を停止し、すべての資金を移す場合には、まず委任設定を解除し、デポジットの2ADAを回収してください。ウォレットの委任設定を解除後、3Cardanoエポック間は委任報酬が継続します。",
   "wallet.settings.undelegateWalletButtonLabel": "委任設定を解除する",
