--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -10271,7 +10271,7 @@
   {
     "descriptors": [
       {
-        "defaultMessage": "!!!Undelegate Wallet",
+        "defaultMessage": "!!!Undelegate",
         "description": "Title for the \"Undelegate wallet\" dialog.",
         "end": {
           "column": 3,
