--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -310,6 +310,7 @@
   "settings.wallets.currency.titleLabel": "Show ada price in other currency",
   "settings.wallets.currency.description": "This feature does… Lorem ipsum dolor sit amet, consectetur adipiscing elit",
   "settings.wallets.currency.selectLabel": "Countervalue",
+  "settings.wallets.currency.poweredBy.label": "Powered by ",
   "sidebar.wallets.addWallet": "Add wallet",
   "staking.countdown.learnMore.linkUrl": "https://iohk.zendesk.com/hc/en-us",
   "staking.delegationCenter.bodyTitle": "Wallets",
@@ -944,8 +945,8 @@
   "wallet.statusMessages.activeRestore": "The balance and transaction history of this wallet is {percentage}% synced with the blockchain.",
   "wallet.summary.no.transactions": "No recent transactions",
   "wallet.summary.page.pendingTransactionsLabel": "Number of pending transactions",
-  "wallet.summary.page.currencyLastFetched": "Fetched {fetchedTimeAgo}",
-  "wallet.summary.page.currencyFetching": "Fetching",
+  "wallet.summary.page.currencyLastFetched": "fetched {fetchedTimeAgo}",
+  "wallet.summary.page.currencyIsFetchingRate": "fetching",
   "wallet.summary.page.showMoreTransactionsButtonLabel": "Show more transactions",
   "wallet.summary.page.syncingTransactionsMessage": "Your transaction history for this wallet is being synced with the blockchain.",
   "wallet.summary.page.todayLabel": "Today",
