DDW-500 Implement design for native tokens - Assets should be renamed to Tokens everywhere

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -908,7 +908,7 @@
   "wallet.send.confirmationDialog.addressFromLabel": "From address",
   "wallet.send.confirmationDialog.addressToLabel": "To",
   "wallet.send.confirmationDialog.amountLabel": "Amount",
-  "wallet.send.confirmationDialog.assetLabel": "Asset",
+  "wallet.send.confirmationDialog.assetLabel": "Token",
   "wallet.send.confirmationDialog.back": "Back",
   "wallet.send.confirmationDialog.feesLabel": "Transaction fee",
   "wallet.send.confirmationDialog.flightCandidateCheckboxLabel": "I understand that real ada will be moved as part of this transaction and that this action is irreversible.",
@@ -921,8 +921,8 @@
   "wallet.send.confirmationDialog.title": "Confirm transaction",
   "wallet.send.confirmationDialog.totalLabel": "Total",
   "wallet.send.form.amount.label": "Amount",
-  "wallet.send.form.asset.label": "Asset",
-  "wallet.send.form.button.addAssetButtonLabel": "+ Add another asset",
+  "wallet.send.form.asset.label": "Token",
+  "wallet.send.form.button.addAssetButtonLabel": "+ Add another token",
   "wallet.send.form.button.addNewReceiver": "+ Add another receiver",
   "wallet.send.form.button.removeReceiver": "Remove",
   "wallet.send.form.calculatingFeesLabel": "Calculating fees",
@@ -1029,7 +1029,7 @@
   "wallet.summary.page.syncingTransactionsMessage": "Your transaction history for this wallet is being synced with the blockchain.",
   "wallet.summary.page.todayLabel": "Today",
   "wallet.summary.page.tokenSendButton": "Send",
-  "wallet.summary.page.tokensTitle": "Assets",
+  "wallet.summary.page.tokensTitle": "Tokens",
   "wallet.summary.page.transactionsLabel": "Number of transactions",
   "wallet.summary.page.unknownLabel": "Unknown",
   "wallet.summary.page.yesterdayLabel": "Yesterday",
@@ -1060,7 +1060,7 @@
   "wallet.transaction.metadataConfirmationLabel": "Show unmoderated content",
   "wallet.transaction.metadataDisclaimer": "Transaction metadata is not moderated and may contain inappropriate content.",
   "wallet.transaction.metadataLabel": "Transaction metadata",
-  "wallet.transaction.multipleTokens": "Multiple assets",
+  "wallet.transaction.multipleTokens": "Multiple tokens",
   "wallet.transaction.noInputAddressesLabel": "No addresses",
   "wallet.transaction.pending.cancelPendingTxnNote": "This transaction has been pending for a long time. To release the funds used by this transaction, you can try canceling it.",
   "wallet.transaction.pending.cancelPendingTxnSupportArticle": "Why should I cancel this transaction?",
