--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -908,7 +908,7 @@
   "wallet.send.confirmationDialog.addressFromLabel": "差出人住所",
   "wallet.send.confirmationDialog.addressToLabel": "送金先",
   "wallet.send.confirmationDialog.amountLabel": "金額",
-  "wallet.send.confirmationDialog.assetLabel": "資産",
+  "wallet.send.confirmationDialog.assetLabel": "トークン",
   "wallet.send.confirmationDialog.back": "戻る",
   "wallet.send.confirmationDialog.feesLabel": "取引料金",
   "wallet.send.confirmationDialog.flightCandidateCheckboxLabel": "このトランザクションの一環として実際のADAが送金されること、またこのアクションは取消しできないことを理解しました。",
@@ -921,9 +921,9 @@
   "wallet.send.confirmationDialog.title": "トランザクションの確認",
   "wallet.send.confirmationDialog.totalLabel": "合計",
   "wallet.send.form.amount.label": "金額",
-  "wallet.send.form.asset.label": "資産",
-  "wallet.send.form.button.addAssetButtonLabel": "+別のアセットを追加する",
-  "wallet.send.form.button.addNewReceiver": "+別のレシーバーを追加する",
+  "wallet.send.form.asset.label": "トークン",
+  "wallet.send.form.button.addAssetButtonLabel": "+ 別のトークンを追加する",
+  "wallet.send.form.button.addNewReceiver": "+ 別のレシーバーを追加する",
   "wallet.send.form.button.removeReceiver": "削除",
   "wallet.send.form.calculatingFeesLabel": "手数料を計算しています",
   "wallet.send.form.description.hint": "任意のメッセージを入力できます",
@@ -1029,7 +1029,7 @@
   "wallet.summary.page.syncingTransactionsMessage": "ウォレットのトランザクション履歴は現在ブロックチェーンと同期中です。",
   "wallet.summary.page.todayLabel": "今日",
   "wallet.summary.page.tokenSendButton": "送金",
-  "wallet.summary.page.tokensTitle": "資産",
+  "wallet.summary.page.tokensTitle": "トークン",
   "wallet.summary.page.transactionsLabel": "トランザクション数",
   "wallet.summary.page.unknownLabel": "不明",
   "wallet.summary.page.yesterdayLabel": "昨日",
@@ -1060,7 +1060,7 @@
   "wallet.transaction.metadataConfirmationLabel": "調整されていないコンテンツを表示する",
   "wallet.transaction.metadataDisclaimer": "トランザクションメタデータは承認制ではなく、不適切な内容を含む場合があります。",
   "wallet.transaction.metadataLabel": "トランザクションメタデータ",
-  "wallet.transaction.multipleTokens": "複数のアセット",
+  "wallet.transaction.multipleTokens": "複数のトークン",
   "wallet.transaction.noInputAddressesLabel": "アドレスなし",
   "wallet.transaction.pending.cancelPendingTxnNote": "このトランザクションは長時間処理中となっています。このトランザクションに使用されている資金を解放するために、トランザクションのキャンセルを試みることができます。",
   "wallet.transaction.pending.cancelPendingTxnSupportArticle": "このトランザクションをキャンセルする理由",
