--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -309,6 +309,10 @@
   "settings.support.steps.reportProblem.link": "ご使用のブラウザーでサポートリクエストフォームを開き",
   "settings.support.steps.reportProblem.title": "問題を報告する",
   "settings.support.steps.title": "サポートリクエストの作成方法：",
+  "settings.wallets.currency.description": "!!!This feature does… Lorem ipsum dolor sit amet, consectetur adipiscing elit",
+  "settings.wallets.currency.poweredBy.label": "!!!Powered by",
+  "settings.wallets.currency.selectLabel": "!!!Countervalue",
+  "settings.wallets.currency.titleLabel": "!!!Show ada price in other currency",
   "sidebar.wallets.addWallet": "ウォレット追加",
   "staking.countdown.learnMore.linkUrl": "https://iohk.zendesk.com/hc/ja",
   "staking.delegationCenter.bodyTitle": "ウォレット",
@@ -1011,6 +1015,8 @@
   "wallet.settings.walletPublicKeyShowInstruction": "ウォレット公開鍵を表示するには[表示]ボタンをクリックしてください",
   "wallet.statusMessages.activeRestore": "ウォレットの残高とトランザクション履歴はブロックチェーンと{percentage}%同期されました。",
   "wallet.summary.no.transactions": "最近のトランザクションはありません",
+  "wallet.summary.page.currencyIsFetchingRate": "!!!Fetching",
+  "wallet.summary.page.currencyLastFetched": "!!!Fetched {fetchedTimeAgo}",
   "wallet.summary.page.pendingTransactionsLabel": "処理中のトランザクション数",
   "wallet.summary.page.showMoreTransactionsButtonLabel": "もっと表示",
   "wallet.summary.page.syncingTransactionsMessage": "ウォレットのトランザクション履歴は現在ブロックチェーンと同期中です。",
