--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -309,7 +309,7 @@
   "settings.support.steps.reportProblem.link": "Open the support request form in your browser",
   "settings.support.steps.reportProblem.title": "Report a problem",
   "settings.support.steps.title": "Steps for creating a support request:",
-  "settings.wallets.currency.description": "This feature does… Lorem ipsum dolor sit amet, consectetur adipiscing elit",
+  "settings.wallets.currency.description": "Description...",
   "settings.wallets.currency.poweredBy.label": "Powered by ",
   "settings.wallets.currency.selectLabel": "Countervalue",
   "settings.wallets.currency.titleLabel": "Show ada price in other currency",
@@ -1015,8 +1015,9 @@
   "wallet.settings.walletPublicKeyShowInstruction": "To show wallet public key click \"Reveal\" button",
   "wallet.statusMessages.activeRestore": "The balance and transaction history of this wallet is {percentage}% synced with the blockchain.",
   "wallet.summary.no.transactions": "No recent transactions",
-  "wallet.summary.page.currencyIsFetchingRate": "fetching",
-  "wallet.summary.page.currencyLastFetched": "fetched {fetchedTimeAgo}",
+  "wallet.summary.page.currency.isFetchingRate": "fetching",
+  "wallet.summary.page.currency.lastFetched": "fetched {fetchedTimeAgo}",
+  "wallet.summary.page.currency.title": "Estimated conversion:",
   "wallet.summary.page.pendingTransactionsLabel": "Number of pending transactions",
   "wallet.summary.page.showMoreTransactionsButtonLabel": "Show more transactions",
   "wallet.summary.page.syncingTransactionsMessage": "Your transaction history for this wallet is being synced with the blockchain.",
