--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -281,7 +281,7 @@
   "settings.menu.stakePools.link.label": "ステークプール",
   "settings.menu.support.link.label": "ユーザーサポート",
   "settings.menu.termsOfUse.link.label": "サービス利用規約",
-  "settings.menu.wallets.link.label": "!!!Wallets",
+  "settings.menu.wallets.link.label": "ウォレット",
   "settings.stakePools.smash.description": "{link}は、ステークプールの詳細を素早くロードすることを可能にする、オフチェーンのメタデータサーバーです。ステークプールは、サーバーごとに異なるポリシーに基づいて調整されます。",
   "settings.stakePools.smash.descriptionIOHKContent1": "IOHKサーバーは、登録されたステークプールが有効であることを確認し、ティッカー名や商標の重複を回避し、プールが攻撃的または害となる可能性のある情報を有していないかチェックします。",
   "settings.stakePools.smash.descriptionIOHKContent2": "これで問題を起こす可能性のあるアクターをフィルタリングすることにより、詐欺や荒らし、虐待行為に対処することができます。IOHKのSMASHサーバーの詳細は{link}。",
@@ -309,7 +309,7 @@
   "settings.support.steps.reportProblem.link": "ご使用のブラウザーでサポートリクエストフォームを開き",
   "settings.support.steps.reportProblem.title": "問題を報告する",
   "settings.support.steps.title": "サポートリクエストの作成方法：",
-  "settings.wallets.currency.description": "!!!This feature does… Lorem ipsum dolor sit amet, consectetur adipiscing elit",
+  "settings.wallets.currency.description": "!!!Description",
   "settings.wallets.currency.poweredBy.label": "!!!Powered by",
   "settings.wallets.currency.selectLabel": "!!!Countervalue",
   "settings.wallets.currency.titleLabel": "!!!Show ada price in other currency",
@@ -1015,8 +1015,9 @@
   "wallet.settings.walletPublicKeyShowInstruction": "ウォレット公開鍵を表示するには[表示]ボタンをクリックしてください",
   "wallet.statusMessages.activeRestore": "ウォレットの残高とトランザクション履歴はブロックチェーンと{percentage}%同期されました。",
   "wallet.summary.no.transactions": "最近のトランザクションはありません",
-  "wallet.summary.page.currencyIsFetchingRate": "!!!Fetching",
-  "wallet.summary.page.currencyLastFetched": "!!!Fetched {fetchedTimeAgo}",
+  "wallet.summary.page.currency.isFetchingRate": "!!!Fetching",
+  "wallet.summary.page.currency.lastFetched": "!!!Fetched {fetchedTimeAgo}",
+  "wallet.summary.page.currency.title": "!!!Estimated conversion:",
   "wallet.summary.page.pendingTransactionsLabel": "処理中のトランザクション数",
   "wallet.summary.page.showMoreTransactionsButtonLabel": "もっと表示",
   "wallet.summary.page.syncingTransactionsMessage": "ウォレットのトランザクション履歴は現在ブロックチェーンと同期中です。",
