[DDW-452] Adjustments, copy and translation

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -309,10 +309,11 @@
   "settings.support.steps.reportProblem.link": "ご使用のブラウザーでサポートリクエストフォームを開き",
   "settings.support.steps.reportProblem.title": "問題を報告する",
   "settings.support.steps.title": "サポートリクエストの作成方法：",
-  "settings.wallets.currency.description": "!!!Description",
-  "settings.wallets.currency.poweredBy.label": "!!!Powered by",
-  "settings.wallets.currency.selectLabel": "!!!Countervalue",
-  "settings.wallets.currency.titleLabel": "!!!Show ada price in other currency",
+  "settings.wallets.currency.description": "ADA残高を表示する通貨を選択してください。",
+  "settings.wallets.currency.disclaimer": "換金レートは{currencyApiName}により保証なしで提供されています。換算値は参考としてのみ使用してください。<br />換金後残高は、{currencyApiName}が追跡した、アクティブな暗号通貨取引所における現在の世界的なADA平均価格を反映しています。ADAの換金は、{currencyApiName}がサポートする法定通貨および暗号通貨にのみ可能です。その他の現地通貨への換金は不可能な場合があります。",
+  "settings.wallets.currency.poweredBy.label": "提供：",
+  "settings.wallets.currency.selectLabel": "通貨を選択してください",
+  "settings.wallets.currency.titleLabel": "ADA残高を別の通貨で表示する",
   "sidebar.wallets.addWallet": "ウォレット追加",
   "staking.countdown.learnMore.linkUrl": "https://iohk.zendesk.com/hc/ja",
   "staking.delegationCenter.bodyTitle": "ウォレット",
@@ -1015,9 +1016,9 @@
   "wallet.settings.walletPublicKeyShowInstruction": "ウォレット公開鍵を表示するには[表示]ボタンをクリックしてください",
   "wallet.statusMessages.activeRestore": "ウォレットの残高とトランザクション履歴はブロックチェーンと{percentage}%同期されました。",
   "wallet.summary.no.transactions": "最近のトランザクションはありません",
-  "wallet.summary.page.currency.isFetchingRate": "!!!Fetching",
-  "wallet.summary.page.currency.lastFetched": "!!!Fetched {fetchedTimeAgo}",
-  "wallet.summary.page.currency.title": "!!!Estimated conversion:",
+  "wallet.summary.page.currency.isFetchingRate": "フェッチしています",
+  "wallet.summary.page.currency.lastFetched": "フェッチ：{fetchedTimeAgo}",
+  "wallet.summary.page.currency.title": "換金通貨：",
   "wallet.summary.page.pendingTransactionsLabel": "処理中のトランザクション数",
   "wallet.summary.page.showMoreTransactionsButtonLabel": "もっと表示",
   "wallet.summary.page.syncingTransactionsMessage": "ウォレットのトランザクション履歴は現在ブロックチェーンと同期中です。",
