--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -309,10 +309,11 @@
   "settings.support.steps.reportProblem.link": "Open the support request form in your browser",
   "settings.support.steps.reportProblem.title": "Report a problem",
   "settings.support.steps.title": "Steps for creating a support request:",
-  "settings.wallets.currency.description": "Description...",
+  "settings.wallets.currency.description": "Select a conversion currency for displaying your ada balances.",
+  "settings.wallets.currency.disclaimer": "Conversion rates are provided by {currencyApiName} without any warranty. Please use the calculated conversion value only as a reference.<br />Converted balances reflect the current global average price of ada on active cryptocurrency exchanges, as tracked by {currencyApiName}. Ada conversion is available only to fiat and cryptocurrencies that are supported by {currencyApiName}, other local currency conversions may not be available.",
   "settings.wallets.currency.poweredBy.label": "Powered by ",
-  "settings.wallets.currency.selectLabel": "Countervalue",
-  "settings.wallets.currency.titleLabel": "Show ada price in other currency",
+  "settings.wallets.currency.selectLabel": "Select currency",
+  "settings.wallets.currency.titleLabel": "Display ada balances in other currency",
   "sidebar.wallets.addWallet": "Add wallet",
   "staking.countdown.learnMore.linkUrl": "https://iohk.zendesk.com/hc/en-us",
   "staking.delegationCenter.bodyTitle": "Wallets",
@@ -1017,7 +1018,7 @@
   "wallet.summary.no.transactions": "No recent transactions",
   "wallet.summary.page.currency.isFetchingRate": "fetching",
   "wallet.summary.page.currency.lastFetched": "fetched {fetchedTimeAgo}",
-  "wallet.summary.page.currency.title": "Estimated conversion:",
+  "wallet.summary.page.currency.title": "Converts as",
   "wallet.summary.page.pendingTransactionsLabel": "Number of pending transactions",
   "wallet.summary.page.showMoreTransactionsButtonLabel": "Show more transactions",
   "wallet.summary.page.syncingTransactionsMessage": "Your transaction history for this wallet is being synced with the blockchain.",
